# lib2docScrape

./: .agent.md  .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ADVANCED_SEARCH_FEATURE_COMPLETE.md  CLEANUP.md  CLI_ENHANCEMENT_COMPLETE.md  COMPREHENSIVE_CLI_COMPLETE.md  CONTENT_RELEVANCE_FEATURE_COMPLETE.md  Dockerfile  Dockerfile.test  ENHANCED_FEATURES.md  ENHANCED_GITHUB_ANALYSIS_COMPLETE.md  ENHANCED_GITHUB_REPO_ANALYSIS_PLAN.md  FEATURE_SUGGESTIONS.md  FINAL_TEST_OPTIMIZATION.md  FUTURE_FEATURES_ROADMAP.md  GUI_README.md  HIL_VALIDATION_SYSTEM_PLAN.md  INTEGRATED_SYSTEM_IMPLEMENTATION_PLAN.md  Jenkinsfile  LIBRARY_SEARCH_FEATURE_SUMMARY.md  MCP_SERVERS.md  MULTI_LIBRARY_FEATURE_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  README_FEATURES.md  REVISED_TECH_STACK_PLAN.md  TESTING_OPTIMIZATION.md  TEST_OPTIMIZATION.md  TEST_OPTIMIZATION_COMPLETE.md  TEST_OPTIMIZATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  analyze_test_performance.py  benchmark_targets.yaml  benchmark_tests.py  bunfig.toml  (+80 more)
.github/: copilot-instructions.md
archive/: output_1732555231.464698.json  output_1732555398.571271.json  output_1732555539.636678.json  output_1732555830.524866.json  output_1732555975.961151.json  output_1732556051.8287308.json  output_1732556167.337826.json  output_1732556862.884922.json  output_1732557276.853667.json  output_1732557760.2267468.json  output_1732558498.514227.json  output_1732559025.1121001.json  output_1732559447.413785.json  output_1732559476.9184341.json  output_1732559562.4321642.json  output_1732559659.68298.json  output_1732559735.049407.json  output_1732559914.10406.json  output_1732560006.769829.json  output_1732560120.4471529.json  output_1732560342.433897.json  output_1732560378.096693.json  output_1732560503.695277.json  output_1732560672.945174.json  output_1732560851.4400482.json  output_1732560974.322701.json  output_1732561026.065779.json  output_1732561093.2437592.json  output_1732561318.7022889.json  output_1732561707.556011.json  output_1732561876.409898.json  output_1732561961.718237.json  output_1732562122.030506.json  output_1732562335.1957939.json  output_1732562449.929582.json  output_1732562613.203201.json  output_1732563235.942444.json  output_1732563677.131504.json  output_1732563801.25125.json  output_1732564289.103795.json  (+1464 more)
cline_docs/: ancillaryDocsIndex.md  automated_testing_achievement.md  cleanup_plan.md  codebaseSummary.md  completed_initiatives_log.md  currentTask.md  currentTask.tdd_status.md  e2e_testing_framework.md  gui-testing-implementation-summary.md  gui_test_implementation_summary.md  gui_test_plan.md  historical_test_fix_log.md  implementation_plan.md  improvements.md  problems.md  projectRoadmap.md  tdd.md  techStack.md  test_coverage_plan_phase1_zero_percent.md  test_coverage_plan_phase3_more_low_coverage.md  test_strategy.md
comprehensive_scraped_libraries/: README.md  beautifulsoup4_api_bs4builderhtml_005.md  beautifulsoup4_api_bs4html_002.md  beautifulsoup4_api_moduleshtml_003.md  beautifulsoup4_index_001.md  beautifulsoup4_indexhtml_004.md  requests_api_013.md  requests_community_faq_007.md  requests_community_out-there_008.md  requests_community_recommended_006.md  requests_community_release-process_011.md  requests_community_support_009.md  requests_community_updates_012.md  requests_community_vulnerabilities_010.md  requests_dev_authors_015.md  requests_dev_contributing_014.md  requests_index_001.md  requests_user_advanced_004.md  requests_user_authentication_005.md  requests_user_install_002.md  requests_user_quickstart_003.md
crawl4ai/: enums.py
docs/: TestSolvingPlan.md  url_handling.md  url_handling_migration.md  user_guide.md
examples/: custom_crawler.py  url_handling_demo.py  url_info_examples.py
improved_scraped_libraries/: README.md  beautifulsoup4_Beautiful_Soup_Documentation__Beautiful_Soup_4130_documentation_1.md  beautifulsoup4_bs4_package__Beautiful_Soup_4130_documentation_2.md  requests_Installation_of_Requests__Requests_2323_documentation_2.md  requests_Requests_HTTP_for_Humans__Requests_2323_documentation_1.md
lib2docScrape/: doc_organizer.py
lib2docscrape.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
playwright-report/: index.html
reports/: diagnostic_report.json  discovered-deps-test.html  discovered-deps-test.json  discovered-deps.json  first_real_world_test.json  simple-dependency-test.json  test-deps.html  test-deps.json  working_real_world_test.json
scraped_libraries/: README.md  beautifulsoup4_Beautiful_Soup_Documentation__Beautiful_Soup_4130_documentation_1.md  beautifulsoup4_bs4_package__Beautiful_Soup_4130_documentation_2.md  requests_Installation_of_Requests__Requests_2323_documentation_2.md  requests_Requests_HTTP_for_Humans__Requests_2323_documentation_1.md
scripts/: benchmark_url_handling.py  complete_pipeline_demo.py  comprehensive_scraping_demo.py  dependency_discovery.py  diagnostic_real_world_test.py  first_real_world_test.py  improved_pipeline_demo.py  run_e2e_tests.py  simple_dependency_test.py  simple_success_test.py  test_discovered_dependencies.py  test_markdown_output.py  test_project_dependencies.py  test_runner.sh  uv_test.sh  working_real_world_test.py
src/: __init__.py  backend_selector.py  base.py  crawler.py  main.py  main_fixed.py  simple_api.py
templates/: base.html  config.html  index.html  libraries.html  results.html  scraping_dashboard.html
test_templates/: diff.html  document.html  home.html  library.html  search.html  version.html
tests/: Document Organizer Implementation (Exact Match)  Test_link_processesorQODO.py  basic.test.ts  conftest.py  run-js-tests.js  setup.ts  simple.test.ts  test-summary.md  test_advanced_search_discovery.py  test_backend_performance_tracker.py  test_backend_selector.py  test_backend_selector_complete.py  test_backend_selector_integration.py  test_base.py  test_cli_comprehensive.py  test_conftest.py  test_content_processing_improvements.py  test_content_processor.py  test_content_processor_advanced.py  test_content_processor_edge.py  test_crawl4ai.py  (+59 more)
(+375 files in other folders)
