[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib2docscrape"
version = "0.1.0"
description = "A web scraping tool for library documentation"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "duckduckgo-search>=4.4.1",
    "pydantic>=2.5.2",
    "markdownify>=0.11.6",
    "bleach>=6.0.0", # Added bleach for sanitization
    "certifi>=2024.2.2", # Required by crawl4ai backend
    "requests>=2.31.0", # Required by utils/helpers.py
    "tldextract>=3.1.0", # Added for URLInfo domain parsing
    "scrapy>=2.11.0", # Added for Scrapy backend
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    # "pytest-html>=4.1.1", # Removed
    "pytest-asyncio>=0.24.0",
    # "pytest-html-reporter>=0.2.9", # Removed
    "uvloop>=0.19.0", # Added for test environment
    "fastapi>=0.110.0", # Required for GUI tests
    "httpx>=0.27.0", # Required by fastapi.testclient
    "pytest-mock>=3.10.0", # Added for mocker fixture
    "hypothesis>=6.92.1", # Added for property-based testing
    "scikit-learn>=1.3.0", # Required for NLP
    "nltk>=3.8.1", # Required for NLP
    "psutil>=5.9.0", # Required for system monitoring
    "jinja2>=3.1.2", # Required for templates
    "bz2file>=0.98" # Required for compression
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "" # Removed HTML reporter options
testpaths = ["tests"]
asyncio_mode = "auto"
